--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container-1">
         <div id="svgDiv">
-            <img id="svg" src="assets/Mathematics-bro.svg" />
+            <img id="svg" alt="Mathematics-bro" src="assets/Mathematics-bro.svg" />
         </div>
         <!-- Task 1 -->
         <form  onsubmit="Register(event)">
@@ -20,27 +20,27 @@
                 <h1>The Multiples</h1>
                 <div class="child-con1">
                     <div>
-                        <label>Name <img src="assets\icons8-person-48.png" width="16" height="16"></label><input
+                        <label>Name <img alt="icon" src="assets/icons8-person-48.png" width="16" height="16"></label><input
                             minlength="6" id="name" placeholder="eg. Justin Brown" required />
                     </div>
                     <div>
-                        <label>Birth Date <img src="assets\icons8-date-50.png" width="16" height="16"> </label><input
+                        <label>Birth Date <img alt="icon" src="assets/icons8-date-50.png" width="16" height="16"> </label><input
                             type="date" id="dob" required />
                     </div>
                     <div>
-                        <label>Age <img src="assets\icons8-age-50.png" width="16" height="16"> </label><input id="age"
+                        <label>Age <img alt="icon" src="assets/icons8-age-50.png" width="16" height="16"> </label><input id="age"
                             disabled />
                     </div>
 
                     <div>
-                        <label>Gender <img src="assets\icons8-gender-64.png" width="16" height="16"> </label><select
+                        <label>Gender <img alt="icon" src="assets/icons8-gender-64.png" width="16" height="16"> </label><select
                             id="genderInp" required>
                             <option>M</option>
                             <option>F</option>
                         </select>
                     </div>
                     <div>
-                        <label>Email <img src="assets\icons8-email-48.png" width="16" height="16"> </label><input
+                        <label>Email <img alt="icon" src="assets/icons8-email-48.png" width="16" height="16"> </label><input
                             type="email" placeholder="eg. xxxx@gmail.com" id="email" />
                     </div>
 
@@ -51,9 +51,8 @@
         Register
     </button>
     <a href="/personalStats.html">
-        <input onclick="findPercentageScore()" value="Percentage Score" type="button"  id="personal-btn">
+        <input onclick="findPercentageScore()" value="Percentage Score" type="button"  id="personal-btn"/>
             
-    </input>
     </a>
 </div>
                 </div>
