--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <div>
                         <label>Gender <img alt="icon" src="assets/icons8-gender-64.png" width="16" height="16"> </label><select
                             id="genderInp" required>
+                            <option value="">choose gender</option>
                             <option>M</option>
                             <option>F</option>
                         </select>
@@ -50,10 +51,9 @@
     <button id="submission" type="submit">
         Register
     </button>
-    <a href="/personalStats.html">
-        <input onclick="findPercentageScore()" value="Percentage Score" type="button"  id="personal-btn"/>
-            
-    </a>
+    <input onclick="findPercentageScore()" value="Percentage Score" type="button"  id="personal-btn"/>
+
+
 </div>
                 </div>
                 </div>
