fix route error

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <div>
                         <label>Email <img alt="icon" src="assets/icons8-email-48.png" width="16" height="16"> </label><input
-                            type="email" placeholder="eg. xxxx@gmail.com" id="email" />
+                            type="email" pattern=".+@gmail\.com" placeholder="eg. xxxx@gmail.com" id="email" />
                     </div>
 
                     <h5 id="errorsReg"></h5>
