--- a/game.html
+++ b/game.html
@@ -12,17 +12,17 @@
 <body>
 
     <ul id="animated-container">
-        <li class="animated-bg"><img src="assets/division.png" /></li>
-        <li class="animated-bg"><img src="assets/times.png" /></li>
-        <li class="animated-bg"><img src="assets/division.png" /></li>
-        <li class="animated-bg"><img src="assets/times.png" /></li>
-        <li class="animated-bg"><img src="assets/plus.png" /></li>
-        <li class="animated-bg"><img src="assets/times.png" /></li>
-        <li class="animated-bg"><img src="assets/minus.png" /></li>
-        <li class="animated-bg"><img src="assets/times.png" /></li>
-        <li class="animated-bg"><img src="assets/division.png" /></li>
-        <li class="animated-bg"><img src="assets/times.png" /></li>
-        <li class="animated-bg"><img src="assets/plus.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/division.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/times.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/division.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/times.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/plus.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/times.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/minus.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/times.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/division.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/times.png" /></li>
+        <li class="animated-bg"><img alt="math-sign" src="assets/plus.png" /></li>
     </ul>
     <div id="mainHolder">
         <div id="theGame">
@@ -77,8 +77,8 @@
 
                 </table>
                 <table>
-                    <tr >
-                        <td colspan="8" id="noDataGrade">No Data Avaialable</td>
+                    <tr>
+                        <td colspan="7" id="noDataGrade">No Data Avaialable</td>
                     </tr>
                     <tr class="barChartRow gradesChart">
                         <td class="barChartData" id="50"></td>
