--- a/stats.html
+++ b/stats.html
@@ -16,7 +16,7 @@
     <div id="showPercentage">
 
         <table id="statsTable">
-            <tr><h1 id="title">The Multiples</h1></tr>
+            <tr ><span id="title" class="h1-alike">The Multiples</span></tr>
             <thead>
 
                 <tr>
