--- a/personalStats.html
+++ b/personalStats.html
@@ -18,9 +18,8 @@
             </div>
         </div>
         <table id="showPercentage">
-            <tr>
-                <h1 id="title">The Multiples</h1>
-            </tr>
+            <tr ><span id="title" class="h1-alike">The Multiples</span></tr>
+
             <thead>
                 <tr>
                     <th>Name</th>
